# barbosajpc-mlops-icev

./: docker-compose.yml  dvc.yaml  main.py  mlflow.db  pyproject.toml
.dvc/: config
data/processed/: wine.parquet
logs/: predictions.jsonl
mlartifacts/1/models/m-3eebbb98805d4331af150b6f59ce4412/artifacts/: MLmodel  conda.yaml  model.pkl
mlartifacts/1/models/m-4adeda50cbb648cbbd3b42b8a882db4b/artifacts/: MLmodel
mlartifacts/1/models/m-8740579c08fa4365842b8cbcca89b8be/artifacts/: MLmodel
mlartifacts/1/models/m-989a2cc183444f948bd40a740338063d/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-adecdbbd296b43a997025cce0fa2dcfe/artifacts/: MLmodel
mlartifacts/1/models/m-c36955427c2f40bfb7ac268e3ab79a39/artifacts/: MLmodel
mlartifacts/1/models/m-d962becf11d442b4b20c0ecd792bd7c8/artifacts/: MLmodel
src/: train.py
